# Projects-work

Silver Lining/: index.html  style.css
Student Registration sofware/: addStudents.js  addStudentsImproved.js  addTestStudents.js  package-lock.json  package.json
Student Registration sofware/Student Regist Secondary School/: package-lock.json  package.json
Student Registration sofware/Student Regist Secondary School/Backend/: Registration.db  package.json  server.js
Student Registration sofware/Student Regist Secondary School/Documentation/: .$Architectural Diagram.png.bkp  .$Untitled Diagram.png.bkp  BlueLedger Documentation.docx
Student Registration sofware/Student Regist Secondary School/public/: index.html  script.js  style.css
Student Registration sofware/Student Regist Secondary School/scripts/: sync-resources.js
Student Registration sofware/Student Regist Secondary School/src-tauri/: tauri.conf.json
Student Registration sofware/Student Regist Secondary School/src-tauri.bak_20250823035251/: Cargo.toml  tauri.conf.json
Student Registration sofware/Student Regist Secondary School/src-tauri.bak_20250823035251/src/: main.rs
Student Registration sofware/Student Regist Secondary School/src-tauri/nsis/: blueledger.nsh
Student Registration sofware/Student Regist Secondary School/src-tauri/resources/: BlueLedgerBackend-S.xml  Service-Troubleshooting-S.txt  Service-Troubleshooting.txt  User-Guide-Secondary.txt
Student Registration sofware/Student Regist Secondary School/src-tauri/src/: lib.rs
(+6 files in other folders)
