[package]
name = "student-reg-secondary"
version = "0.1.0"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
